--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "a0a5dfe5-2b8c-4e91-9be3-75facad6c86b"
   },
   "newProjectRoot": "projects",
   "projects": {
